--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,9 @@
 RewriteEngine On
+RewriteBase /
+
 RewriteRule ^book/(.*)$ /api/carcontrol.php?action=reserve&car=$1 [R=301,L]
+
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME}\.php -f
+RewriteRule ^(.+)$ $1.php [L]
+
