--- a/www/.htaccess
+++ b/www/.htaccess
@@ -2,6 +2,7 @@ RewriteEngine On
 RewriteBase /
 
 RewriteRule ^book/(.*)$ /api/carcontrol.php?action=reserve&car=$1 [R=301,L]
+RewriteRule ^Control/(.*)$ /api/carcontrol.php?action=$1 [L]
 RewriteRule ^control/(.*)$ /api/carcontrol.php?action=$1 [L]
 
 RewriteCond %{REQUEST_FILENAME} !-d
