--- a/www/.htaccess
+++ b/www/.htaccess
@@ -1,7 +1,7 @@
 RewriteEngine On
 RewriteBase /
 
-RewriteRule ^start/(.*)$ /charge.php?action=$1 [L]
+RewriteRule ^start/(.*)$ /charge.php?charger=$1 [L]
 RewriteRule ^book/(.*)$ /api/carcontrol.php?action=reserve&car=$1 [R=301,L]
 RewriteRule ^Control/(.*)$ /api/carcontrol.php?action=$1 [L]
 RewriteRule ^control/(.*)$ /api/carcontrol.php?action=$1 [L]
