--- a/www/.htaccess
+++ b/www/.htaccess
@@ -3,8 +3,8 @@ RewriteBase /
 
 RewriteRule ^start/(.*)$ /charge.php?charger=$1 [L]
 RewriteRule ^book/(.*)$ /api/carcontrol.php?action=reserve&car=$1 [R=301,L]
-RewriteRule ^Control/(.*)$ /api/carcontrol.php?action=$1 [L]
-RewriteRule ^control/(.*)$ /api/carcontrol.php?action=$1 [L]
+RewriteRule ^Control/(.*)$ /api/carcontrol.php?%{QUERY_STRING}&action=$1 [L]
+RewriteRule ^control/(.*)$ /api/carcontrol.php?%{QUERY_STRING}&action=$1 [L]
 
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}\.php -f
