--- a/www/.htaccess
+++ b/www/.htaccess
@@ -3,7 +3,9 @@ RewriteBase /
 
 Header set Access-Control-Allow-Origin "*"
 
+RewriteRule ^(parking|revenue)(.*)$ /admin/$1.php [L]
 RewriteRule ^fast$ /shortcuts.php [L]
+RewriteRule ^do/(.*)$ /get.php?what=$1 [L]
 RewriteRule ^start/(.*)$ /charge.php?charger=$1 [L]
 RewriteRule ^book/(.*)$ /api/carcontrol.php?action=reserve&car=$1 [R=301,L]
 RewriteRule ^Control/(.*)$ /api/carcontrol.php?%{QUERY_STRING}&action=$1 [L]
