--- a/www/.htaccess
+++ b/www/.htaccess
@@ -10,8 +10,8 @@ RewriteRule ^start/(.*)$ /charge.php?charger=$1 [L]
 RewriteRule ^book/(.*)$ /api/carcontrol.php?action=reserve&car=$1 [R=301,L]
 RewriteRule ^Control/(.*)$ /api/carcontrol.php?%{QUERY_STRING}&action=$1 [L]
 RewriteRule ^control/(.*)$ /api/carcontrol.php?%{QUERY_STRING}&action=$1 [L]
-RewriteRule ^show$ /api/control.php?action=show [L]
-RewriteRule ^hide$ /api/control.php?action=hide [L]
+RewriteRule ^(lock|unlock|end)$ /api/carcontrol.php?%{QUERY_STRING}&action=$1 [L]
+RewriteRule ^(show|hide)$ /api/control.php?action=$1 [L]
 
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}\.php -f
